--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,63 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Gradle files
+.gradle/
+build/
+*/build/
+**/build/
+*.iml
+&nbsp;
+&nbsp;
+
+# Local configuration file (sdk path, etc)
+local.properties
+&nbsp;
+&nbsp;
+
+# Android Studio Navigation editor temp files
+.navigation/
+&nbsp;
+&nbsp;
+
+# Android Studio captures
+captures/
+&nbsp;
+&nbsp;
+
+# External native build folder generated in Android Studio 2.2+
+.externalNativeBuild/
+&nbsp;
+&nbsp;
+
+# IntelliJ IDEA
+.idea/
+*.iws
+*.iml
+*.ipr
+&nbsp;
+&nbsp;
+
+# User-specific configurations
+*.hprof
+&nbsp;
+&nbsp;
+
+# Gradle cache
+.gradle/
+build/
+&nbsp;
+&nbsp;
+
+# Miscellaneous
+*.log
+*.DS_Store
+*.class
+*.jar
+*.war
+*.ear
+*.swp
+*.swo
+*.tmp
+*. ⬤
